# cardarena-tournament-core

./: .gitignore  CHANGELOG.md  FILE_CHECKLIST.md  README.md  claude.md  demo_teams.py  pyproject.toml  test_yugioh_example.py
.github/workflows/: ci.yml  lint-commits.yml  publish.yml  release.yml
cardarena_tournament_core/: __init__.py  errors.py  models.py  tournament.py  utils.py
cardarena_tournament_core/common/: __init__.py  errors.py  models.py
cardarena_tournament_core/pairings/: __init__.py  base.py  elimination.py  round_robin.py  swiss.py
cardarena_tournament_core/pairings/base/: __init__.py  base.py
cardarena_tournament_core/scoring/: __init__.py  base.py  pokemon.py  pokemon_tcg.py  tiebreakers.py  union_arena.py  yugioh.py  yugioh_tcg.py
cardarena_tournament_core/scoring/base/: __init__.py  base.py  base_tcg.py
cardarena_tournament_core/scoring/tcg/: __init__.py  base_tcg.py  pokemon_tcg.py  yugioh_tcg.py
docs/superpowers/plans/: 2026-04-16-active-roster-lifecycle.md
tests/: test_imports.py  test_models.py  test_tournament.py  test_utils.py
tests/pairings/: test_base.py  test_elimination.py  test_round_robin.py  test_swiss.py
tests/scoring/: test_pokemon_tcg.py  test_tiebreakers.py  test_union_arena.py  test_validation.py  test_yugioh.py
