[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cardarena-tournament-core"
version = "0.1.0"
description = "General-purpose tournament engine: Swiss pairing, Round Robin, Elimination formats with pluggable scoring and tiebreaker systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL 2.0" }
keywords = ["tournament", "swiss", "pairing", "tcg", "scoring"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.15.10",
]

[tool.hatch.build.targets.wheel]
packages = ["cardarena_tournament_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
major_on_zero = false
# [skip ci] prevents the version bump commit from re-triggering CI on develop
commit_message = "chore(release): bump version to v{version} [skip ci]"

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = false
