[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cardarena-tournament-core"
version = "1.0.0"
description = "General-purpose tournament engine: Swiss pairing, Round Robin, Elimination formats with pluggable scoring and tiebreaker systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL 2.0" }
authors = [{ name = "KataCards" }]
maintainers = [{ name = "KataCards" }]
keywords = ["tournament", "swiss", "pairing", "tcg", "scoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/KataCards/cardarena-tournament-core"
Repository = "https://github.com/KataCards/cardarena-tournament-core"
Issues = "https://github.com/KataCards/cardarena-tournament-core/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.10",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["cardarena_tournament_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cardarena_tournament_core --cov-report=term-missing --cov-fail-under=98"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_incomplete_defs = false
no_implicit_optional = false

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
major_on_zero = false
# [skip ci] prevents the version bump commit from re-triggering CI on develop
commit_message = "chore(release): bump version to v{version} [skip ci]"

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = false
